--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,17 @@ dependencies:
   cloud_firestore: ^5.6.0
   flutter_bloc: ^8.1.6
   equatable: ^2.0.7
+  provider: ^6.1.2
+  google_fonts: ^6.2.1
+  lottie: ^3.2.0
+  fl_chart: ^0.69.0
+  intl: ^0.20.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -52,9 +59,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.14.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -65,8 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/icon.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
