--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,12 +46,15 @@ dependencies:
   lottie: ^3.2.0
   fl_chart: ^0.69.0
   intl: ^0.20.1
-
+  build_runner: ^2.4.13
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.4.4
+  test: ^1.24.3
+  fake_cloud_firestore: ^3.1.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -60,6 +63,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
   flutter_launcher_icons: ^0.14.2
+  firebase_auth_mocks: ^0.14.1
+  golden_toolkit: ^0.15.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
